Add support for input modulation decorator